@@ -10,6 +10,7 @@
 * Logs will be saved to log.txt by default
 * Added a profile editor
 * Fixed a bug with the chat splitter
+* Added an 'allseen' command
 
 2.0.4.2 (r1237) 2008-04-01:
 * Allow use of %keywords% and commands in anti-idles and with /say (Cause of issue 61)
